[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["feras98nawafleh <feras.a.nawafleh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
sklearn = "^0.0"
jupyterlab = "^3.2.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
